@@ -182,18 +182,6 @@
 #  undef MONGOC_ENABLE_SASL_SSPI
 #endif
 
-
-/*
- * MONGOC_ENABLE_SASL_GSSAPI is set from configure to determine if we are
- * compiled with GSSAPI support.
- */
-#define MONGOC_ENABLE_SASL_GSSAPI @MONGOC_ENABLE_SASL_GSSAPI@
-
-#if MONGOC_ENABLE_SASL_GSSAPI != 1
-#  undef MONGOC_ENABLE_SASL_GSSAPI
-#endif
-
-
 /*
  * MONGOC_HAVE_SASL_CLIENT_DONE is set from configure to determine if we
  * have SASL and its version is new enough to use sasl_client_done (),
